# example-cmake-gradle

./: CMakeLists.txt  README.md  build.bat  build.gradle  jar.bat  run.bat  settings.gradle
cmake/: FindJNI.cmake
cmake/Modules/: FindJNI.cmake
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: Example.cpp  driver.cpp
src/main/java/example/: Example.java
